--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "standard",
+    "lint": "standard",
+    "test": "find ./test -name '*.js' -exec node {} \\;",
     "start": "node server.js",
     "build": "npm-run-all --parallel build:*",
     "watch": "npm-run-all --parallel watch:*",
@@ -34,6 +35,7 @@
     "jade": "^1.11.0",
     "jadeify": "^4.6.0",
     "jquery": "^2.2.0",
+    "jsonwebtoken": "^5.7.0",
     "normalize.css": "^3.0.3",
     "npm-run-all": "^1.5.1",
     "page": "^1.6.4",
@@ -47,8 +49,10 @@
     "postcss-custom-properties": "^5.0.0",
     "postcss-discard-comments": "^2.0.3",
     "postcss-import": "^8.0.2",
+    "require-dir": "^0.3.0",
     "rethinkdb": "^2.2.1",
-    "rethinkdb-init": "0.0.5"
+    "rethinkdb-init": "0.0.5",
+    "shortid": "^2.2.4"
   },
   "devDependencies": {
     "quickreload": "^1.1.0",
