--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,5 +29,5 @@ jobs:
         - run:
             name: Install npm deps
             command: |
-              meteor build --directory ..
+              ~/.meteor/meteor build --directory ..
               cd ../bundle/programs/server && npm i --quiet --production
