--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,31 +9,32 @@ jobs:
     steps:
       - checkout
       - restore_cache:
-          key: v1-{{ .Branch }}-{{ checksum ".meteor/release" }}
+          key: v1-{{ checksum ".meteor/release" }}
       - run: if [[ ! -e ~/.meteor ]]; then curl -sL https://install.meteor.com | sed s/--progress-bar/-sL/g | /bin/sh; fi
       - save_cache:
-          key: v1-{{ .Branch }}-{{ checksum ".meteor/release" }}
+          key: v1-{{ checksum ".meteor/release" }}
           paths:
             - "~/.meteor"
       - restore_cache:
-          key: deps1-{{ .Branch }}-{{ checksum "package.json" }}
+          key: v1-{{ checksum "package.json" }}
       - run:
           name: Install our npm deps
           command: |
             npm i --quiet --production
       - save_cache:
-          key: deps1-{{ .Branch }}-{{ checksum "package.json" }}
+          key: v1-{{ checksum "package.json" }}
           paths:
             - "node_modules"
       - restore_cache:
-          key: v1-{{ .Branch }}-{{ checksum ".meteor/versions" }}
+          key: v1-{{ checksum ".meteor/versions" }}
       - run:
           name: Build meteor bundle
           command: |
             ~/.meteor/meteor build --directory ..
       - save_cache:
-          key: v1-{{ .Branch }}-{{ checksum ".meteor/versions" }}
+          key: v1-{{ checksum ".meteor/versions" }}
           paths:
+            - ".meteor/local/resolver-result-cache.json"
             - ".meteor/local/plugin-cache"
       - run:
           name: Install meteor's npm deps
