--- a/package.json
+++ b/package.json
@@ -3,9 +3,8 @@
   "version": "1.0.0",
   "description": "Make Lunch!",
   "dependencies": {
-    "async": "^1.3.0",
-    "babel-runtime": "^6.23.0",
-    "bcrypt": "^1.0.2"
+    "@babel/runtime": "^7.11.2",
+    "async": "^1.5.2"
   },
   "devDependencies": {},
   "scripts": {
